k8s/service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: retro-board
  labels:
    name: frontend
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
        app: frontend
    spec:
      containers:
        - name: frontend
          image: containers.home.develbox.info/retro-board/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: retro-board
  labels:
    name: frontend
    app: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
